tests/e2e/semantics/service_output_unique3.error
Error: syntax error in story at line 2, column 19

2|        when tweet as client
                        ^^^^^^

E0108: Service output `client` must be unique. Use `as outputName`
