tests/e2e/semantics/service_output_unique3.story
twitter stream as client
    when tweet as client
        x = 3
